--- a/src/pages/lesson-page/lesson-page.module.scss
+++ b/src/pages/lesson-page/lesson-page.module.scss
@@ -1,52 +1,24 @@
 @import '@styles/theme.module.scss';
 
-.secondTitle {
-    font: $small-text-font-bold;
-}
-
-.seperator {
-    height: 1px;
-    width: 100%;
-    margin: 10px 0;
-    background-color: $snow-white;
-    opacity: 15%;
-}
-
-.aboveTheLine {
-    display: flex;
-    align-content: space-between;
-    justify-content: space-between;
-}
-
 .backButton {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     padding: 0px;
-    border-radius: 0;
 }
 
-.lessonTitle {
-    text-transform: capitalize;
-    font: $large-title;
-}
-.lessonDescription {
-    font: $small-text;
-}
-
-.calendarWithDetails {
-    display: flex;
-    justify-content: space-between;
-}
-
-.hourButtonsContainer {
-    width: 100%;
+.headerSection {
     padding-top: 1em;
+    padding-bottom: 2em;
 }
 
 .typeOfClass {
     font: $large-title;
+}
+
+.secondTitle {
+    font: $small-text-font-bold;
+}
+
+.calendarWithDetails {
+    display: flex;
 }
 
 .schedulingContainer {
@@ -55,11 +27,37 @@
     margin-right: 1em;
 }
 
-.headerSection {
-    padding-top: 1em;
-    padding-bottom: 2em;
+.lessonTitle {
+    text-transform: capitalize;
+    font: $large-title;
 }
-.selectedHour{
+
+.seperator {
+    height: 1px;
+    width: 100%;
+    margin: 1em 0;
+    background-color: $snow-white;
+    opacity: 15%;
+}
+
+.lessonDescription {
+    font: $small-text;
+}
+
+.hourButtonsContainer {
+    width: 100%;
+    padding-top: 1em;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: start;
+}
+.hourButton {
+    margin: 0 0 1em 1em;
+}
+
+.selectedHour {
     background-color: rgba(255, 91, 43, 0.1);
     border: 1px solid $orange-red;
+    padding-left: 22px;
+    padding-right: 22px;
 }
