--- a/src/components/hour-buttons/hour-buttons.module.scss
+++ b/src/components/hour-buttons/hour-buttons.module.scss
@@ -1,7 +1,5 @@
 @import '@styles/theme.module.scss';
 
-.root {
-}
 
 .hourButtonsContainer {
     width: 100%;
@@ -11,10 +9,8 @@
     align-content: start;
 }
 .selectedHour {
-    background-color: rgba(255, 91, 43, 0.1);
+    background-color: rgba($orange-red 0.1);
     border: 1px solid $orange-red;
-    padding-left: 22px;
-    padding-right: 22px;
 }
 
 
