refactor: removing the accordion and small styling changes

--- a/src/pages/lesson-page/lesson-page.module.scss
+++ b/src/pages/lesson-page/lesson-page.module.scss
@@ -24,8 +24,8 @@
 }
 
 .lessonTitle {
-    text-transform: capitalize;
-    font: $large-title;
+    font: $small-text;
+    align-self: end;
 }
 
 .seperator {
@@ -38,4 +38,8 @@
 
 .lessonDescription {
     font: $small-text;
+}
+.titleContainer {
+    display: flex;
+    justify-content: space-between;
 }
