--- a/src/components/lesson-details/lesson-details.module.scss
+++ b/src/components/lesson-details/lesson-details.module.scss
@@ -1,91 +1,12 @@
 @import '@styles/theme.module.scss';
 
-.root {
-}
 
-.AccordionRoot {
-    width: 300px;
-    color: $white;
-    background-color: $black;
-}
-
-.AccordionItem {
-    overflow: hidden;
-    margin-top: 1px;
-}
-
-.AccordionItem:first-child {
-    margin-top: 0;
-}
-
-.AccordionItem:focus-within {
-    position: relative;
-    z-index: 1;
-}
-
-.AccordionHeader {
-    display: flex;
-}
-
-.AccordionTrigger {
-    font-family: inherit;
-    padding: 0 20px;
-    height: 45px;
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 15px;
-    line-height: 1;
-    cursor: pointer;
-}
-
-.AccordionContent {
-    overflow: hidden;
-    font-size: 15px;
-}
-.AccordionContent[data-state='open'] {
-    animation: slideDown 300ms cubic-bezier(0.87, 0, 0.13, 1);
-}
-.AccordionContent[data-state='closed'] {
-    animation: slideUp 300ms cubic-bezier(0.87, 0, 0.13, 1);
-}
-
-.AccordionContentText {
-    padding: 15px 20px;
-}
-
-.AccordionChevron {
-    transition: transform 300ms cubic-bezier(0.87, 0, 0.13, 1);
-}
-.AccordionTrigger[data-state='open'] > .AccordionChevron {
-    transform: rotate(180deg);
-}
-
-@keyframes slideDown {
-    from {
-        height: 0;
-    }
-    to {
-        height: var(--radix-accordion-content-height);
-    }
-}
-
-@keyframes slideUp {
-    from {
-        height: var(--radix-accordion-content-height);
-    }
-    to {
-        height: 0;
-    }
-}
-
-.Separator {
+.seperator {
     height: 1px;
     width: 100%;
     margin: 10px 0;
-    background-color: $snow-white;
-    opacity: 15%;
+    background-color: $snow-white-40;
+
 }
 
 .nextButton {
@@ -99,11 +20,9 @@
     margin-top: 20px;
     cursor: pointer;
 }
+
 .nextButton:hover{
     background-color: $orange-red;
 }
 
-.lessonTitle {
-    text-transform: capitalize;
-    font: $medium-title;
-}
+
