fix: cr changes

--- a/src/pages/lesson-page/lesson-page.module.scss
+++ b/src/pages/lesson-page/lesson-page.module.scss
@@ -39,7 +39,7 @@
 .lessonDescription {
     font: $small-text;
 }
-.titleContainer {
+.titlesContainer {
     display: flex;
     justify-content: space-between;
 }
