feat: cr changes

--- a/src/pages/lesson-page/lesson-page.module.scss
+++ b/src/pages/lesson-page/lesson-page.module.scss
@@ -39,7 +39,23 @@
 .lessonDescription {
     font: $small-text;
 }
-.titleContainer {
+.titlesContainer {
     display: flex;
     justify-content: space-between;
+}
+
+.nextButton {
+    background: $white;
+    color: $black;
+    width: 100%;
+    text-align: center;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 30px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+
+.nextButton:hover{
+    background-color: $orange-red;
 }
