refactor:  remove unused userImage state and related code

--- a/src/components/dropdown-menu/dropdown-menu.module.scss
+++ b/src/components/dropdown-menu/dropdown-menu.module.scss
@@ -63,20 +63,17 @@
     width: 100%;
     background-color: white;
     margin: 5px 0px;
-    opacity:40%
-
+    opacity: 40%;
 }
 
 .downArrow {
     width: 14px;
     height: 14px;
-    margin-bottom: 4px;
     margin-left: 9px;
 }
 
 .defaultArrow {
     display: inline-block;
-    margin-bottom: 4px;
     margin-left: 9px;
 }
 
