Refactor header dropdown menu component and update usage in header component

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -14,11 +14,7 @@
 .menu {
     display: flex;
     flex-wrap: wrap;
-}
-
-.menuButton {
-    padding-right: 22px;
-    padding-left: 22px;
+    align-items: center;
 }
 
 .logo {
